Bug 393723 - Kwin master with bad blur effect on secondary monitor ( works perfectly on primary )
Summary: Kwin master with bad blur effect on secondary monitor ( works perfectly on pr...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 394786 396055 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-05-01 10:51 UTC by Alexandre Pereira
Modified: 2018-07-01 23:18 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
mgraesslin: Wayland+
mgraesslin: X11-


Attachments
blur in konsole on multiple monitors (3.81 MB, image/png)
2018-05-01 10:51 UTC, Alexandre Pereira
Details
3 settings (3.07 MB, image/jpeg)
2018-05-01 15:00 UTC, Alex Nemeth
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre Pereira 2018-05-01 10:51:07 UTC
Created attachment 112341 [details]
blur in konsole on multiple monitors

Hi,

I am using kwin master ( git daily compiled packages of kubuntu and also happens on opensuse git kde unstable packages ). I have 2 monitors and blur effect on.

In the first monitor, blur works very well, but on the second monitor, the blur doesn't work properly. The actual background of the blur is the content of the first monitor.

Attaching a screenshot of kwin and konsole with transparent background blured to the minimal, so you can see the background. On first monitor, there is this bug report window, on the second monitor, no windows ( beside a konsole window in each monitor ).

Also, if blur effect is disabled, the backgrounds of transparency are correct on second monitor.

Also, this started happening when updated to kwin master versions( 5.13.80 ) ( did not happen on kwin stable , 5.12.X ).
Comment 1 Martin Flöser 2018-05-01 11:50:36 UTC
Seems to be a regression in the new blur effect
Comment 2 Martin Flöser 2018-05-01 13:47:05 UTC
@Alex: any idea?
Comment 3 Alex Nemeth 2018-05-01 15:00:24 UTC
Created attachment 112346 [details]
3 settings

I can't reproduce the issue.
I have tried this on a Manjaro KDE VM in VMWare with multiple monitor enabled and in a live version of the very latest KDE Neon Dev Git Unstable.
Both work perfectly.
I even tried different resolutions too.

Alexandre what distro, GPU, GPU driver do you use? X11 or Wayland?
Comment 4 Martin Flöser 2018-05-01 16:02:57 UTC
See the flags: it's Wayland only.
Comment 5 Alexandre Pereira 2018-05-01 17:22:17 UTC
> Alexandre what distro, GPU, GPU driver do you use? X11 or Wayland?

I am using Kubuntu CI unstable packages and openSUSE KDE git packages.

X11 works perfectly. The problem is only on Wayland and KWin master branch ( kwin 5.12 branch works perfectly )
Comment 6 Alexandre Pereira 2018-05-01 17:26:31 UTC
Are you using this package ? https://packaging.neon.kde.org/kde/kwin.git/commit/
It seems to be following +kwin (4:5.12.4-1).

It should not show in Manjaro, as they are using stable releases.

Can you try a kwin version of daily built packages ?

http://download.opensuse.org/repositories/KDE:/Medias/images/iso/ ( krypton version ) or Kubuntu with unstable CI packages.
Comment 7 Alexandre Pereira 2018-05-01 18:46:00 UTC
Sorry, forgot to mention that I have an ATI video card.
Comment 8 Martin Flöser 2018-05-01 18:54:43 UTC
For the record: I also noticed the problem after the new blur got introduced.
Comment 9 Alex Nemeth 2018-05-01 21:31:10 UTC
With wayland I can now reproduce the problem.
I'll look into it...
Comment 10 Alex Nemeth 2018-05-03 10:50:19 UTC
Fix: https://phabricator.kde.org/D12678
Comment 11 Alex Nemeth 2018-05-29 13:33:07 UTC
Git commit 99532fb95c1edb855ffeedf8551130d7a783feff by Alex Nemeth.
Committed on 29/05/2018 at 13:32.
Pushed by anemeth into branch 'master'.

Fix multimonitor blur

Summary:
On wayland blur on secondary monitor would not render correctly.
Depends on D12452

Test Plan:
 - use more than one output
 - log in in a wayland session
 - open a transparent window (for example: Konsole with transparent and blur enabled profile)
 - drag the window to another screen
 - blurs the content under the window corretly

Reviewers: #kwin, graesslin, davidedmundson

Reviewed By: #kwin, davidedmundson

Subscribers: apol, zzag, davidedmundson, kwin, #kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D12678

M  +22   -23   effects/blur/blur.cpp
M  +1    -1    effects/blur/blur.h
M  +4    -7    effects/blur/blurshader.cpp
M  +0    -1    effects/blur/blurshader.h

https://commits.kde.org/kwin/99532fb95c1edb855ffeedf8551130d7a783feff
Comment 12 David Edmundson 2018-06-18 18:45:57 UTC
Git commit 2419c949bfc4673157555f191f417cafb1bb04a0 by David Edmundson, on behalf of Alex Nemeth.
Committed on 18/06/2018 at 18:05.
Pushed by davidedmundson into branch 'Plasma/5.13'.

Fix multimonitor blur

Summary:
On wayland blur on secondary monitor would not render correctly.
Depends on D12452

Test Plan:
 - use more than one output
 - log in in a wayland session
 - open a transparent window (for example: Konsole with transparent and blur enabled profile)
 - drag the window to another screen
 - blurs the content under the window corretly

Reviewers: #kwin, graesslin, davidedmundson

Reviewed By: #kwin, davidedmundson

Subscribers: apol, zzag, davidedmundson, kwin, #kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D12678

M  +22   -23   effects/blur/blur.cpp
M  +1    -1    effects/blur/blur.h
M  +4    -7    effects/blur/blurshader.cpp
M  +0    -1    effects/blur/blurshader.h

https://commits.kde.org/kwin/2419c949bfc4673157555f191f417cafb1bb04a0
Comment 13 Vlad Zahorodnii 2018-06-21 13:24:42 UTC
*** Bug 394786 has been marked as a duplicate of this bug. ***
Comment 14 Kamil Piwowarski 2018-07-01 23:18:48 UTC
*** Bug 396055 has been marked as a duplicate of this bug. ***